UI: Fix textbox selections foreground sometimes not contrasting well with background - fixes #1932
rn=

(integrated from the KomodoIDE master branch change 1399a8f by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/1399a8f

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -108,8 +108,8 @@
 // All text fields
 ::-moz-selection
 {
-    color: @foreground-special;
-    background: @secondary-special;
+    color: @selected-foreground;
+    background: @selected;
 }
 
 /* Tooltips */
